# llm-cli

./: .gitignore  AGENTS.md  Cargo.toml  build_and_alias.sh
llm-cli/: Cargo.toml
llm-cli/src/: main.rs
llm-cli/src/agen_core/: core.rs
llm-cli/src/agent_core/: core.rs  mod.rs  session.rs
llm-cli/src/llm_core/: core.rs  llm.rs  mod.rs
llm-cli/src/persistence/: core.rs  local.rs  mod.rs
src/: main.rs
src/agent_core/: core.rs  mod.rs
src/llm_core/: core.rs  llm.rs
src/persistence/: core.rs  local.rs  mod.rs
